tests/pass/RightSign.java
package pass;

public class RightSign {

    public int doRightSign(int x , int y) {
        return x >> y ;
    } 
}