tests/fail/RightSign.java
package fail;

public class RightSign {

    public static void main(String[] args) {
        return 4 >> "Hej";
        
    } 
}